# Logitech-G25-config

./: README.md  debug.py  debug2.py  g25_hid_manager.py  g25_manager.py  pyproject.toml  requirements.txt
